[gd_scene load_steps=11 format=3 uid="uid://dtwgsm4sfuneh"]

[ext_resource type="FontFile" uid="uid://m4i7q63fedws" path="res://addons/fontawesome/fonts/fa-regular-400.woff2" id="2_adlcu"]
[ext_resource type="Script" path="res://scenes/ui/terminal_screen.gd" id="2_q88ae"]
[ext_resource type="FontFile" uid="uid://dhj15njph7i8m" path="res://addons/fontawesome/fonts/fa-brands-400.woff2" id="2_xbv7o"]
[ext_resource type="FontFile" uid="uid://cave61j52xeuh" path="res://addons/fontawesome/fonts/fa-solid-900.woff2" id="4_8e451"]
[ext_resource type="Script" path="res://addons/fontawesome/FontAwesome.gd" id="5_21y4x"]
[ext_resource type="StyleBox" uid="uid://ch6npjih63qbm" path="res://assets/button_terminal_style.tres" id="5_gyggl"]
[ext_resource type="Script" path="res://addons/fontawesome/FontAwesomeButton.gd" id="6_i6hcg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s55tc"]
bg_color = Color(0, 0, 0, 0.501961)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tccb1"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_conkj"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Tterminal" type="TextureRect"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -253.5
offset_top = -509.0
offset_right = 253.5
offset_bottom = 509.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
script = ExtResource("2_q88ae")

[node name="Borders" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Screen" type="Panel" parent="Borders"]
layout_mode = 2

[node name="Content" type="VBoxContainer" parent="Borders/Screen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Top" type="HBoxContainer" parent="Borders/Screen/Content"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
alignment = 1

[node name="LabelHour" type="Label" parent="Borders/Screen/Content/Top"]
layout_mode = 2
text = "12:58"

[node name="Control" type="Control" parent="Borders/Screen/Content/Top"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LabelMessage" type="Label" parent="Borders/Screen/Content/Top"]
layout_mode = 2
auto_translate = false
localize_numeral_system = false
theme_override_fonts/font = ExtResource("2_adlcu")
theme_override_font_sizes/font_size = 16
text = ""
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_21y4x")
icon_type = "regular"
icon_name = "envelope"

[node name="LabelMute" type="Label" parent="Borders/Screen/Content/Top"]
layout_mode = 2
auto_translate = false
localize_numeral_system = false
theme_override_fonts/font = ExtResource("2_adlcu")
theme_override_font_sizes/font_size = 16
text = ""
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_21y4x")
icon_type = "regular"
icon_name = "bell-slash"

[node name="LabelBT" type="Label" parent="Borders/Screen/Content/Top"]
layout_mode = 2
auto_translate = false
localize_numeral_system = false
theme_override_fonts/font = ExtResource("2_xbv7o")
theme_override_font_sizes/font_size = 16
text = ""
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_21y4x")
icon_type = "brands"
icon_name = "bluetooth"

[node name="LabelWifi" type="Label" parent="Borders/Screen/Content/Top"]
layout_mode = 2
auto_translate = false
localize_numeral_system = false
theme_override_fonts/font = ExtResource("4_8e451")
theme_override_font_sizes/font_size = 16
text = ""
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_21y4x")
icon_name = "wifi"

[node name="LabelSignal" type="Label" parent="Borders/Screen/Content/Top"]
layout_mode = 2
auto_translate = false
localize_numeral_system = false
theme_override_fonts/font = ExtResource("4_8e451")
theme_override_font_sizes/font_size = 16
text = ""
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_21y4x")
icon_name = "signal"

[node name="LabelBattery" type="Label" parent="Borders/Screen/Content/Top"]
layout_mode = 2
auto_translate = false
localize_numeral_system = false
theme_override_fonts/font = ExtResource("4_8e451")
theme_override_font_sizes/font_size = 16
text = ""
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_21y4x")
icon_name = "battery-three-quarters"

[node name="LabelBatteryPercent" type="Label" parent="Borders/Screen/Content/Top"]
layout_mode = 2
text = "82%"

[node name="Content" type="VBoxContainer" parent="Borders/Screen/Content"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="Borders/Screen/Content/Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Label"
horizontal_alignment = 1

[node name="Body" type="PanelContainer" parent="Borders/Screen/Content/Content"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_s55tc")

[node name="MarginContainer" type="MarginContainer" parent="Borders/Screen/Content/Content/Body"]
layout_mode = 2
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 18
theme_override_constants/margin_right = 18
theme_override_constants/margin_bottom = 18

[node name="ListQuests" type="RichTextLabel" parent="Borders/Screen/Content/Content/Body/MarginContainer"]
visible = false
layout_mode = 2
focus_neighbor_left = NodePath("../../../../MarginContainer/HBoxContainer/ButtonQuests")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../../../../MarginContainer/HBoxContainer/ButtonMessages")
focus_neighbor_bottom = NodePath("../../../../MarginContainer/HBoxContainer/ButtonQuests")
focus_next = NodePath("../../../../MarginContainer/HBoxContainer/ButtonQuests")
focus_previous = NodePath("../../../../MarginContainer/HBoxContainer/ButtonQuests")
theme_override_constants/line_separation = 4

[node name="ListMessages" type="ItemList" parent="Borders/Screen/Content/Content/Body/MarginContainer"]
visible = false
layout_mode = 2
focus_neighbor_top = NodePath(".")
focus_neighbor_bottom = NodePath("../../../../MarginContainer/HBoxContainer/ButtonMessages")
focus_next = NodePath("../../../../MarginContainer/HBoxContainer/ButtonMessages")
focus_previous = NodePath("../../../../MarginContainer/HBoxContainer/ButtonMessages")
theme_override_constants/v_separation = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_tccb1")
theme_override_styles/focus = SubResource("StyleBoxFlat_conkj")

[node name="ListNotifications" type="ItemList" parent="Borders/Screen/Content/Content/Body/MarginContainer"]
visible = false
layout_mode = 2
focus_neighbor_top = NodePath(".")
focus_neighbor_bottom = NodePath("../../../../MarginContainer/HBoxContainer/ButtonMessages")
focus_next = NodePath("../../../../MarginContainer/HBoxContainer/ButtonMessages")
focus_previous = NodePath("../../../../MarginContainer/HBoxContainer/ButtonMessages")
theme_override_constants/v_separation = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_tccb1")
theme_override_styles/focus = SubResource("StyleBoxFlat_conkj")
allow_search = false

[node name="LabelMessage" type="RichTextLabel" parent="Borders/Screen/Content/Content/Body/MarginContainer"]
layout_mode = 2
focus_neighbor_top = NodePath(".")
focus_neighbor_bottom = NodePath("../../../../MarginContainer/HBoxContainer/ButtonMessages")
focus_next = NodePath("../../../../MarginContainer/HBoxContainer/ButtonMessages")
focus_previous = NodePath("../../../../MarginContainer/HBoxContainer/ButtonMessages")
theme_override_constants/line_separation = 4
bbcode_enabled = true
text = "[b]Objet du message[/b]
Hello, bonjour !
"

[node name="IconClose" type="Button" parent="Borders/Screen/Content/Content/Body/MarginContainer/LabelMessage"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -32.0
offset_bottom = 24.0
grow_horizontal = 0
localize_numeral_system = false
theme_override_fonts/font = ExtResource("4_8e451")
theme_override_font_sizes/font_size = 32
text = ""
script = ExtResource("6_i6hcg")
icon_size = 32
icon_name = "xmark"

[node name="MarginContainer" type="MarginContainer" parent="Borders/Screen/Content"]
layout_mode = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="Borders/Screen/Content/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="LabelLeft" type="Label" parent="Borders/Screen/Content/MarginContainer/HBoxContainer"]
layout_mode = 2
auto_translate = false
localize_numeral_system = false
theme_override_fonts/font = ExtResource("4_8e451")
theme_override_font_sizes/font_size = 32
text = ""
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_21y4x")
icon_size = 32
icon_name = "left-long"

[node name="ButtonQuests" type="Button" parent="Borders/Screen/Content/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
localize_numeral_system = false
tooltip_text = "Quests"
focus_neighbor_top = NodePath("../../../Content/Body/MarginContainer/ListQuests")
focus_neighbor_bottom = NodePath("../../../HBoxContainer2/ButtonHomeTerm")
focus_next = NodePath("../ButtonMessages")
focus_previous = NodePath("../../../HBoxContainer2/ButtonHomeTerm")
theme_override_colors/font_color = Color(0.121569, 0.298039, 0.313726, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_focus_color = Color(0.121569, 0.298039, 0.313726, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("4_8e451")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = ExtResource("5_gyggl")
theme_override_styles/hover = ExtResource("5_gyggl")
theme_override_styles/pressed = ExtResource("5_gyggl")
theme_override_styles/disabled = ExtResource("5_gyggl")
theme_override_styles/focus = ExtResource("5_gyggl")
text = ""
script = ExtResource("6_i6hcg")
icon_size = 48
icon_name = "clipboard-question"

[node name="ButtonMessages" type="Button" parent="Borders/Screen/Content/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
localize_numeral_system = false
tooltip_text = "Messages"
focus_neighbor_top = NodePath("../../../Content/Body/MarginContainer/ListMessages")
focus_neighbor_bottom = NodePath("../../../HBoxContainer2/ButtonHomeTerm")
focus_next = NodePath("../ButtonNotifications")
focus_previous = NodePath("../ButtonQuests")
theme_override_colors/font_color = Color(0.321569, 0.227451, 0.337255, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_focus_color = Color(0.321569, 0.227451, 0.337255, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("4_8e451")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = ExtResource("5_gyggl")
theme_override_styles/hover = ExtResource("5_gyggl")
theme_override_styles/pressed = ExtResource("5_gyggl")
theme_override_styles/disabled = ExtResource("5_gyggl")
theme_override_styles/focus = ExtResource("5_gyggl")
text = ""
script = ExtResource("6_i6hcg")
icon_size = 48
icon_name = "envelope"

[node name="ButtonNotifications" type="Button" parent="Borders/Screen/Content/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(72, 0)
layout_mode = 2
localize_numeral_system = false
tooltip_text = "Messages"
focus_neighbor_top = NodePath("../../../Content/Body/MarginContainer/ListMessages")
focus_neighbor_bottom = NodePath("../../../HBoxContainer2/ButtonHomeTerm")
focus_next = NodePath("../../../HBoxContainer2/ButtonHomeTerm")
focus_previous = NodePath("../ButtonMessages")
theme_override_colors/font_color = Color(0.447059, 0.164706, 0.0156863, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_focus_color = Color(0.447059, 0.164706, 0.0156863, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("4_8e451")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = ExtResource("5_gyggl")
theme_override_styles/hover = ExtResource("5_gyggl")
theme_override_styles/pressed = ExtResource("5_gyggl")
theme_override_styles/disabled = ExtResource("5_gyggl")
theme_override_styles/focus = ExtResource("5_gyggl")
text = ""
script = ExtResource("6_i6hcg")
icon_size = 48
icon_name = "bell"

[node name="LabelRight" type="Label" parent="Borders/Screen/Content/MarginContainer/HBoxContainer"]
layout_mode = 2
auto_translate = false
localize_numeral_system = false
theme_override_fonts/font = ExtResource("4_8e451")
theme_override_font_sizes/font_size = 32
text = ""
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_21y4x")
icon_size = 32
icon_name = "right-long"

[node name="HBoxContainer2" type="HBoxContainer" parent="Borders/Screen/Content"]
layout_mode = 2
alignment = 1

[node name="ButtonHomeTerm" type="Button" parent="Borders/Screen/Content/HBoxContainer2"]
layout_mode = 2
localize_numeral_system = false
tooltip_text = "Close"
focus_neighbor_top = NodePath("../../MarginContainer/HBoxContainer/ButtonQuests")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../../MarginContainer/HBoxContainer/ButtonQuests")
focus_previous = NodePath("../../MarginContainer/HBoxContainer/ButtonMessages")
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("4_8e451")
theme_override_font_sizes/font_size = 48
text = ""
script = ExtResource("6_i6hcg")
icon_size = 48
icon_name = "xmark"

[node name="MarginContainer2" type="MarginContainer" parent="Borders/Screen/Content"]
layout_mode = 2
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer2" type="HBoxContainer" parent="Borders/Screen/Content/MarginContainer2"]
layout_mode = 2
alignment = 1

[connection signal="item_clicked" from="Borders/Screen/Content/Content/Body/MarginContainer/ListMessages" to="." method="_on_list_messages_item_clicked"]
[connection signal="item_clicked" from="Borders/Screen/Content/Content/Body/MarginContainer/ListNotifications" to="." method="_on_list_notifications_item_clicked"]
[connection signal="pressed" from="Borders/Screen/Content/Content/Body/MarginContainer/LabelMessage/IconClose" to="." method="_on_icon_close_pressed"]
[connection signal="focus_entered" from="Borders/Screen/Content/MarginContainer/HBoxContainer/ButtonQuests" to="." method="_on_button_quests_pressed"]
[connection signal="focus_entered" from="Borders/Screen/Content/MarginContainer/HBoxContainer/ButtonMessages" to="." method="_on_button_list_messages_pressed"]
[connection signal="focus_entered" from="Borders/Screen/Content/MarginContainer/HBoxContainer/ButtonNotifications" to="." method="_on_button_notifications_pressed"]
[connection signal="pressed" from="Borders/Screen/Content/MarginContainer/HBoxContainer/ButtonNotifications" to="." method="_on_button_notifications_pressed"]
[connection signal="pressed" from="Borders/Screen/Content/HBoxContainer2/ButtonHomeTerm" to="." method="_on_button_back_pressed"]
